--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title> My Webpage Online </title>
-<link rel="stylesheet" href=CSS/main.css>
+<link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
 <header> Beginner Web Developer Resource </header>
