--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 <h2> Step 1: Create your Github account </h2>
 <p> This is your hosting provider. Try to keep your username simple as this will be part of your URL. </p>
-<img src="Images/Image1-LogIn.jpg" img alt="Screenshot of log in page on Github">
+<img src="Images/Image1-LogIn.jpeg" alt="Screenshot of log in page on Github">
 <img src="Images/Image2-SignUp.jpg" alt="Screenshot of sign up page on Github">
 
 <h2> Step 2: Choose your repository name </h2>
