--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
 </nav>
 <h2> Step 1: Create your Github account </h2>
 <p> This is your hosting provider. Try to keep your username simple as this will be part of your URL. </p>
-<img src="/Images/Image1-LogIn.jpeg" alt="Screenshot of log in page on Github">
-<img src="Images/Image2-SignUp.jpg" alt="Screenshot of sign up page on Github">
+<img src="Images/Image1-LogIn.jpg" alt="Screenshot of log in page on Github">
 
 <h2> Step 2: Choose your repository name </h2>
 <p> Type in your account name and end with "github.io". Remember, your repository name must match your accounts name </p>
-<img src=" Image3-CreateRepository.jpeg" alt="Screenshot of repository name">
 <h2> Step 3: Add files</h2>
 <p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html, CSS, images, etc.
-   <img src=" Image6-AddFiles.jpeg" alt="Screenshot after adding "> 
+   
 <h2> Step 4: Confirm upload to web </h2>
 <p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:</p>
 </section>
