--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 <h2> Step 1: Create your Github account </h2>
 <p> This is your hosting provider. Try to keep your username simple as this will be part of your URL. </p>
-<img src="Images/Image1-LogIn.jpg" alt="Screenshot of log in page on Github">
+<img src="Webpage Online Website/Images/Image1-LogIn.jpg" alt="Screenshot of log in page on Github">
 
 <h2> Step 2: Choose your repository name </h2>
 <p> Type in your account name and end with "github.io". Remember, your repository name must match your accounts name </p>
