--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <section>
 <h1> How To Get Your Webpage Online: Easy Step by Step Guide </h1>
-<p> So, you've have just put the finishing touches on your webpage, congratulations! Now you're ready to share your creation with the world wide web. There are a couple of ways to do this but this mini course, we focus on how to publish your webpage using the popular hosting provider GitHub. At the end you will also learn how to connect your Google<!--insert copyright symbol--> domain to your Github account.
+<p> So, you've have just put the finishing touches on your webpage, congratulations! Now you're ready to share your creation with the world wide web.
+    There are a couple of ways to accomplish this, but this guide will focus on how to publish your webpage using the popular hosting provider GitHub. 
+    At the end you will also learn how to connect your Google<!--insert copyright symbol--> domain to your Github account. Explore the rest of the site
+    to delve deeper into some of the terminology by clicking the hyperlink throughout the article.  
 <nav> 
     <ul>
         <li> Step 1: Create your Githib account</li>
@@ -20,7 +23,9 @@
     </ul>
 </nav>
 <h2> Step 1: Create your Github account </h2>
-<p> This is your hosting provider. Try to keep your username simple as this will be part of your URL. </p>
+<p> TGo to "www.gihub.com" and click "Sign" up. This is your hosting provider. Try to keep the username that you choose simple as this will be part of your URL. </p>
+<img src="images/image1login.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
 <img src="images/image1login.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
 <h2> Step 2: Choose your repository name </h2>
