--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p> TGo to "www.gihub.com" and click "Sign" up. This is your hosting provider. Try to keep the username that you choose simple as this will be part of your URL. </p>
 <img src="images/image1login.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
-<img src="images/image1login.JPG" alt="Screenshot of log in page on Github"
+<img src="images/image2signup.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
 <h2> Step 2: Choose your repository name </h2>
 <p> Type in your account name and end with "github.io". Remember, your repository name must match your accounts name </p>
