--- a/index.html
+++ b/index.html
@@ -23,15 +23,23 @@
     </ul>
 </nav>
 <h2> Step 1: Create your Github account </h2>
-<p> TGo to "www.gihub.com" and click "Sign" up. This is your hosting provider. Try to keep the username that you choose simple as this will be part of your URL. </p>
+<p> Go to "www.gihub.com" and click "Sign" up. This is your hosting provider. Try to keep the username that you choose simple as this will be part of your
+    URL. </p>
 <img src="images/image1login.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
 <img src="images/image2signup.JPG" alt="Screenshot of log in page on Github"
-     width = "50%">
+     width = "50%">    
+   
 <h2> Step 2: Choose your repository name </h2>
-<p> Type in your account name and end with "github.io". Remember, your repository name must match your accounts name </p>
-<h2> Step 3: Add files</h2>
-<p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html, CSS, images, etc.
+<p> Type in your account name and end with "github.io". Your repository name shoud match your accounts name </p>
+    <img src="images/Image3CreateRepository.JPG" alt="Create repositiory Step 2 screenshot part 1"
+     width = "50%">
+    vtu,n
+    <h2> Step 3: Add files</h2>
+<p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html,
+    CSS, images, etc. Click here for an alternative option to upload your files.
+    <img src="images/image2signup.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
    
 <h2> Step 4: Confirm upload to web </h2>
 <p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:</p>
