--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
      width = "50%">
    
 <h2> Step 4: Confirm upload to web </h2>
-<p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:</p>
+<p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:
+    <img src="images/Image7EndResult.JPG" alt="Screenshot of log in page on Github"
+     width = "50%"> </p>
 </section>
 
 <section> 
