--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <p> Type in your account name and end with "github.io". Your repository name shoud match your accounts name </p>
     <img src="images/Image3CreateRepository.JPG" alt="Create repositiory Step 2 screenshot part 1"
      width = "50%">
-    vtu,n
+    <img src="images/Image5AddRepository2.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
     <h2> Step 3: Add files</h2>
 <p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html,
     CSS, images, etc. Click here for an alternative option to upload your files.
@@ -42,9 +43,9 @@
      width = "50%">
    
 <h2> Step 4: Confirm upload to web </h2>
-<p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:
+<p> Copy and paste your repository name ending in "github.io". If it doesn't show up the first time, wait a couple of minutes and try again. The end result should look like this:</p>
     <img src="images/Image7EndResult.JPG" alt="Screenshot of log in page on Github"
-     width = "50%"> </p>
+     width = "50%"> 
 </section>
 
 <section> 
