--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      width = "50%">
     <h2> Step 3: Add files</h2>
 <p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html,
-    CSS, images, etc. Click here for an alternative option to upload your files.
+    CSS, images, etc. Click here for an alternative option to upload your files.</p>
     <img src="images/image2signup.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
    
