--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2> Step 3: Add files</h2>
 <p> Click "add file" drop down and choose "upload files". You can upload individual files or you can click and drag your entire folder containing her html,
     CSS, images, etc. Click here for an alternative option to upload your files.</p>
-    <img src="images/image2signup.JPG" alt="Screenshot of log in page on Github"
+    <img src="images/Image6Add Files.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
    
 <h2> Step 4: Confirm upload to web </h2>
