--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 </nav>   
        <h2> Step 1: Deploy your website using Github pages.</h2>
        <p> Open Github pages. Click "Settings" and go to the pages section on the left hand side. Choose main branch. Your Source should read "Deploy from branch" and the Branch section should read Main and (root). The link that presents at the top is your deployed site. Copy and paste the generated URL and save to a note on your desktop.</p>
-
+<img src="images/Image1ClickSettings.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
+    <img src="images/image2AddingCustomDomain.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
     <h2> Step 2: Create your CNAME record </h2> 
-        <p> Set up Custom domain. Type in the name of the domain you purchased. You will likely get an error that says that your site is not configured properly. This is okay. Click your repository name in the top left corner. This will take you to the "Code" section of your repository. You will find a CNAME file that was created. Click the CNAME link an you will see a line of code that is your domain. This is how your computer interally links between your domain and your github page. Now open Google Domains.</p>    
+        <p> Set up your Custom domain. Type in the name of the domain you purchased. You will likely get an error that says that your site is not configured properly. This is okay. Click your repository name in the top left corner. This will take you to the "Code" section of your repository. You will find a CNAME file that was created. Click the CNAME link an you will see a line of code that is your domain. This is how your computer interally links between your domain and your github page. Now open Google Domains.</p>    
 
        <h2> Step 3: Configure your DNS </h2>  
         <p> Now on Google Domains you will provide the directions that will route future visitors to you website hosted on Github. Click on your purchased domain name. Go to DNS on the left hand side. You will find four columns titled "Host name", "Type", "TTL", and "Data". You will only need to update "Type" and "Data" sections. 
@@ -70,10 +73,17 @@
 
        <h2> Add 'A' and 'CNAME' records</h2>    
 
-        <p> Use your Google search engine and type "Manage a custom domain for your Github pages site" or click here. Scroll about halfway down the page to step 5 of the section titled "Configuring an apex domain". Copy and paste the four listed IP addresses into the "Data" section. Make sure your "Type" section is changed to 'A'. Click "Add more to this record" to populate additional empty boxes.</p> 
- 
-       <p> Return to settings section in Github and go to "pages". You should now see your domain name following "Your site is live at...". Your last and final step is to wait for your certificate to proprogate which may take up to one hour.</p>    
-
+        <p> Use your Google search engine and type "Manage a custom domain for your Github pages site" or click here. Scroll about halfway down the page to 
+            step 5 of the section titled "Configuring an apex domain". Copy and paste the four listed IP addresses into the "Data" section. Make sure your 
+            "Type" section is changed to 'A'. Click "Add more to this record" to populate additional empty boxes.</p> 
+ <img src="images/image9CNAME.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
+    <img src="images/Image10CNAME.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
+       <p> Return to settings section in Github and go to "pages". You should now see your domain name following "Your site is live at...". 
+           Your last and final step is to wait for your certificate to proprogate which may take up to one hour.</p>    
+<img src="images/Image11YourSiteLive.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
 </section>
 
 <footer> 
