--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
    
 <h2> Step 2: Choose your repository name </h2>
 <p> Type in your account name and end with "github.io". Your repository name shoud match your accounts name </p>
-    <img src="images/Image3CreateRepository.JPG" alt="Create repositiory Step 2 screenshot part 1"
-     width = "50%">
+    <img src="images/Image3CreateRepository.JPG" alt="Create repositiory Step 2 screenshot part 1" width = "50%">
     <img src="images/Image5AddRepository2.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
     <h2> Step 3: Add files</h2>
@@ -70,11 +69,10 @@
         <p> Now on Google Domains you will provide the directions that will route future visitors to you website hosted on Github. Click on your purchased domain name. Go to DNS on the left hand side. You will find four columns titled "Host name", "Type", "TTL", and "Data". You will only need to update "Type" and "Data" sections. 
          </p> <br></br> 
 
-       <h2> Add 'A' and 'CNAME' records</h2>    
-
-        <p> Use your Google search engine and type "Manage a custom domain for your Github pages site" or click here. Scroll about halfway down the page to 
-            step 5 of the section titled "Configuring an apex domain". Copy and paste the four listed IP addresses into the "Data" section. Make sure your 
-            "Type" section is changed to 'A'. Click "Add more to this record" to populate additional empty boxes.</p> 
+       <h2> Add 'A' and 'CNAME' records</h2>
+    <p> Use your Google search engine and type "Manage a custom domain for your Github pages site" or click here. Scroll about halfway down the page to 
+        step 5 of the section titled "Configuring an apex domain". Copy and paste the four listed IP addresses into the "Data" section. Make sure your 
+        "Type" section is changed to 'A'. Click "Add more to this record" to populate additional empty boxes.</p> 
  <img src="images/image9CNAME.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
     <img src="images/Image10CNAME.JPG" alt="Screenshot of log in page on Github"
