--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 
        <h2> Step 3: Configure your DNS </h2>  
         <p> Now on Google Domains you will provide the directions that will route future visitors to you website hosted on Github. Click on your purchased domain name. Go to DNS on the left hand side. You will find four columns titled "Host name", "Type", "TTL", and "Data". You will only need to update "Type" and "Data" sections. 
-         </p> <br></br> 
-
-       <h2> Add 'A' and 'CNAME' records</h2>
+         </p> 
+       <h2> Step 4: Add 'A' and 'CNAME' records</h2>
     <p> Use your Google search engine and type "Manage a custom domain for your Github pages site" or click here. Scroll about halfway down the page to 
         step 5 of the section titled "Configuring an apex domain". Copy and paste the four listed IP addresses into the "Data" section. Make sure your 
         "Type" section is changed to 'A'. Click "Add more to this record" to populate additional empty boxes.</p> 
