--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 
 <section> 
 <h1> How to connect your custom Google domain to Github </h1>
-<p>  Before you begin this section, make sure you have purchased a custom domain from Google Domains <!--make this an external link--> Most domains will be around 12 to 20 dollars, some are significantly more than that. Choose a domain that fits your budget and you will be billed annually. By the end you will have fully functioning webpage accessible on the world wide web.
+<p>  Before you begin this section, make sure you have purchased a custom domain from Google Domains <!--make this an external link--> Most domains will be 
+    around 12 dollars, some are significantly more than that. Choose a domain that fits your budget and you will be billed annually. By the end you will 
+    have fully functioning webpage accessible on the world wide web.
 <nav>
 <ul>
     <li>Step 1: Deploy your website using Github pages</li>
