--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
 </nav>   
        <h2> Step 1: Deploy your website using Github pages.</h2>
        <p> Open Github pages. Click "Settings" and go to the pages section on the left hand side. Choose main branch. Your Source should read "Deploy from branch" and the Branch section should read Main and (root). The link that presents at the top is your deployed site. Copy and paste the generated URL and save to a note on your desktop.</p>
-<img src="images/Image1ClickSettings.JPG" alt="Screenshot of log in page on Github"
-     width = "50%"> <img src="images/image2AddingCustomDomain.JPG" alt="Screenshot of log in page on Github"
+<img src="images/Image1Click Settings.JPG" alt="Screenshot of log in page on Github"
+     width = "50%"> 
+    <img src="images/image2AddingCustomDomain.JPG" alt="Screenshot of log in page on Github"
      width = "50%">
+    <img src="images/Image12ScreenshotOfRootandMain.JPG" alt="Screenshot of log in page on Github"
+     width = "50%">
+    
     <h2> Step 2: Create your CNAME record </h2> 
         <p> Set up your Custom domain. Type in the name of the domain you purchased. You will likely get an error that says that your site is not configured properly. This is okay. Click your repository name in the top left corner. This will take you to the "Code" section of your repository. You will find a CNAME file that was created. Click the CNAME link an you will see a line of code that is your domain. This is how your computer interally links between your domain and your github page. Now open Google Domains.</p>    
 
